[gd_scene load_steps=16 format=2]

[ext_resource path="res://screens/winScene/winScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/baloon1.png" type="Texture" id=2]
[ext_resource path="res://sprites/images/baloon2.png" type="Texture" id=3]
[ext_resource path="res://sprites/images/baloon3.png" type="Texture" id=4]
[ext_resource path="res://sprites/images/baloon4.png" type="Texture" id=5]
[ext_resource path="res://sprites/images/baloon5.png" type="Texture" id=6]
[ext_resource path="res://sprites/images/baloon6.png" type="Texture" id=7]
[ext_resource path="res://sprites/images/baloon7.png" type="Texture" id=8]
[ext_resource path="res://sprites/images/partyFlags.png" type="Texture" id=9]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=10]
[ext_resource path="res://212 Queenie Sans.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://sprites/images/soundOn.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("baloon1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("baloon1/baloon6:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("baloon1/baloon4:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("baloon1/baloon2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("baloon1/baloon5:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("baloon1/baloon3:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("baloon1/baloon7:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("flags1:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("flags2:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("option1:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 721.101, -256.377 ), Vector2( 296.303, -256.377 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("option1:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("option2:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 723.512, -194.284 ), Vector2( 296.258, -194.284 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("option2:self_modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("option3:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 721.466, -132 ), Vector2( 295.44, -132 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("option3:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("baloon1:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.99839 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -209.684, 317.891 ), Vector2( -209.684, -140.056 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("musicButton:self_modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("option1/jogarNovamente:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.82428, 0.675293 ), Vector2( -0.82428, 0.675293 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("option2/menuInicial:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.292603, 0.925537 ), Vector2( 0.292603, 0.925537 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("option3/sair:position")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.62256, 0.548828 ), Vector2( 1.62256, 0.548828 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("congrats:self_modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("youwin:self_modulate")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("option1/playAgain:self_modulate")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("option2/menuInicial2:self_modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("option3/sair2:self_modulate")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 90
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="Node2D" type="Node2D"]
position = Vector2( 306.117, 509.396 )
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_left = -306.0
margin_top = -509.0
margin_right = 718.0
margin_bottom = 92.0
color = Color( 0.607843, 0.835294, 0.921569, 1 )

[node name="baloon1" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( -209.684, -140.056 )
scale = Vector2( 0.294995, 0.294995 )
texture = ExtResource( 2 )

[node name="baloon2" type="Sprite" parent="baloon1"]
position = Vector2( 693.185, -430.978 )
texture = ExtResource( 3 )

[node name="baloon3" type="Sprite" parent="baloon1"]
position = Vector2( 1365.33, -35.2161 )
texture = ExtResource( 4 )

[node name="baloon4" type="Sprite" parent="baloon1"]
position = Vector2( 333.737, -296.801 )
texture = ExtResource( 5 )

[node name="baloon5" type="Sprite" parent="baloon1"]
position = Vector2( 1075.42, -282.158 )
texture = ExtResource( 6 )

[node name="baloon6" type="Sprite" parent="baloon1"]
position = Vector2( -171.857, 399.261 )
texture = ExtResource( 7 )

[node name="baloon7" type="Sprite" parent="baloon1"]
position = Vector2( 1501.07, 428.717 )
texture = ExtResource( 8 )

[node name="flags1" type="Sprite" parent="."]
position = Vector2( -60.029, -438.372 )
scale = Vector2( 0.383886, 0.383886 )
texture = ExtResource( 9 )

[node name="flags2" type="Sprite" parent="."]
position = Vector2( 410.747, -434.856 )
scale = Vector2( 0.404878, 0.404878 )
texture = ExtResource( 9 )

[node name="option1" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 296.303
margin_top = -256.377
margin_right = 716.302
margin_bottom = -194.377
color = Color( 1, 1, 1, 0.478431 )

[node name="jogarNovamente" type="TouchScreenButton" parent="option1"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -0.82428, 0.675293 )
scale = Vector2( 0.4098, 0.151706 )
normal = ExtResource( 10 )

[node name="playAgain" type="Label" parent="option1"]
margin_left = 78.3522
margin_top = 4.86322
margin_right = 346.352
margin_bottom = 55.8632
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jogar novamente"

[node name="option2" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 296.258
margin_top = -194.284
margin_right = 716.256
margin_bottom = -132.284
color = Color( 1, 1, 1, 0 )

[node name="menuInicial" type="TouchScreenButton" parent="option2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.292603, 0.925537 )
scale = Vector2( 0.409425, 0.148636 )
normal = ExtResource( 10 )

[node name="menuInicial2" type="Label" parent="option2"]
margin_left = 73.534
margin_top = 5.452
margin_right = 341.534
margin_bottom = 56.452
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menu inicial"
align = 1
valign = 1

[node name="option3" type="ColorRect" parent="."]
margin_left = 295.44
margin_top = -132.0
margin_right = 715.444
margin_bottom = -78.0
color = Color( 1, 1, 1, 0.478431 )

[node name="sair" type="TouchScreenButton" parent="option3"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1.62256, 0.548828 )
scale = Vector2( 0.410044, 0.134353 )
normal = ExtResource( 10 )

[node name="sair2" type="Label" parent="option3"]
margin_left = 168.94
margin_top = 1.21783
margin_right = 233.94
margin_bottom = 52.2178
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sair"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/transition_winscene = SubResource( 2 )

[node name="musicButton" type="TouchScreenButton" parent="."]
position = Vector2( 658.069, -503.374 )
scale = Vector2( 0.309, 0.309 )
normal = ExtResource( 12 )

[node name="congrats" type="Label" parent="."]
margin_left = -138.504
margin_top = -138.504
margin_right = 152.496
margin_bottom = -38.5042
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Parabéns"

[node name="youwin" type="Label" parent="."]
margin_left = -169.529
margin_top = -69.8061
margin_right = 166.471
margin_bottom = 30.1939
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Você venceu!"

[connection signal="pressed" from="option1/jogarNovamente" to="." method="_on_jogarNovamente_pressed"]
[connection signal="pressed" from="option2/menuInicial" to="." method="_on_menuInicial_pressed"]
[connection signal="pressed" from="option3/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="musicButton" to="." method="_on_musicButton_pressed"]
